#    GNU Affero General Public License for more ietails.
#
#    You should have received a copy of the GNU Affero General Public
#    License along with this program.  If not, see:
#    <http://www.gnu.org/licenses/agpl.html>.
#
#######################################################################


2014-07-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999949 released.

        * Changed pipe to system() for Berkeley make.


2014-07-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999948 released.

        * Remove and exec.


2014-07-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999947 released.

        * New version of Term::Menus paired with this release.


2014-07-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999946 released.

        * Released last version without new fullauto.pl :-( .

        * Added exec when amazon.


2014-07-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999945 released.

        * Released last version without new FA_Core.pm :-( .

        * New version of Term::Menus paired with this release.


2014-07-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999944 released.

        * Figlet font viewer added.

        * New version of Term::Menus paired with this release.


2014-07-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999943 released.

        * New version of Term::Menus paired with this release.


2014-07-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999942 released.

        * FullAuto now tests for password vs publickey.

        * New version of Term::Menus paired with this release.


2014-07-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999941 released.

        * Updated Makefile.PL for AWS Ubuntu installations.

