@@ -27,7 +27,7 @@
 
 BEGIN {
 
-$main::VERSION='0.9999999949';
+$main::VERSION='0.9999999950';
 
 # ASCII BANNER Courtesy of:  http://www.network-science.de/ascii/
 my $fa_banner=<<END;
@@ -1167,11 +1167,10 @@ END
    &fa_install_module('Devel::GlobalDestruction','install','Makefile');
    &fa_install_module('Import::Into','install','Makefile');
    &fa_install_module('Try::Tiny','install','Makefile');
+   &fa_install_module('Module::Runtime','install','Makefile');
    &fa_install_module('Sub::Exporter','install','Makefile');
    &fa_install_module('Sub::Exporter::Util','install','Makefile');
-   &fa_install_module('Module::Runtime','install','Makefile');
    &fa_install_module('Moo','install','Makefile');
-   &fa_install_module('Moo::Role','install','Makefile');
    &fa_install_module('Test::Fatal','install','Makefile');
    &fa_install_module('MooX::Types::MooseLike','install','Makefile');
    &fa_install_module('MooX::Types::MooseLike::Base','install','Makefile');
